adjusted bug where logo border was pushing into theme change button. Also changed theme change button to icons for a more visual pleasing look. Aligned the navbar contents as well

--- a/Python-Flask-Auth-main/Python-Flask-Auth-main/react-app/src/App.css
+++ b/Python-Flask-Auth-main/Python-Flask-Auth-main/react-app/src/App.css
@@ -7,3 +7,14 @@
     background-color: black;
     color: white;
 }
+
+.theme-change-button {
+    background: none;
+    border: none;
+    font-size: 1.5em;
+    cursor: pointer;
+}
+
+#sun-icon {
+    color: yellow;
+}
