--- a/Python-Flask-Auth-main/Python-Flask-Auth-main/react-app/src/components/Navigation/Navigation.css
+++ b/Python-Flask-Auth-main/Python-Flask-Auth-main/react-app/src/components/Navigation/Navigation.css
@@ -1,7 +1,9 @@
 .main-nav-container {
+  position: fixed;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  width: 100%;
 }
 
 .profile-dropdown {
@@ -33,17 +35,18 @@
   width: 10em;
   display: flex;
   margin-left: -2em;
-  margin-top: -1em;
+  border-color: black;
+  border: 1px;
 }
 
 .profile-button-nav {
-  margin-top: 1em;
-  margin-right: 6.5em;
+  margin-top: 1.9em;
+  margin-right: 6em;
 }
 
 .site-name-nav-bar {
   font-size: 3em;
-  margin-top: .3em;
+  margin-top: .65em;
   font-family: "Sixtyfour", sans-serif;
   color: rgb(2, 10, 127);
 }
